Fix problems reported by FindBugs - ID: 3158929
- Replace string identity comparisons with equals test
- Synchronize static field initialization
- Fix random positive integer generation
- Remove dead fields
- Move null tests to catch NPE
- Remove unused loggers
- Remove redundant initialization to null
- Remove redundant toString() from String variables
- Turn private inner classes to static when possible
- Make sure streams are closed
- Favor autoboxing instead of explicit object construction